--- a/angular/src/app/modules/popup/pages/popup/popup.component.html
+++ b/angular/src/app/modules/popup/pages/popup/popup.component.html
@@ -155,12 +155,55 @@
       PLACE BUY ORDER
     </button>
   </div>
+
+  <div
+    *ngIf="itemInfo?.activeBOPrice && itemInfo?.activeBOAmount"
+    class="bg-yellow-100 border-l-4 border-yellow-500 text-yellow-700 p-4"
+    role="alert"
+  >
+    <div class="flex justify-between font-bold text-sm">
+      <p>Active buy order</p>
+      <p>
+        {{ itemInfo?.activeBOAmount }} x {{ itemInfo?.activeBOPriceString }}
+      </p>
+    </div>
+    <p>You already have an active buy order for this item.</p>
+  </div>
 </ng-container>
 
 <ng-template #goToSCMListingTmpl>
-  <p class="text-lg text-center">
-    This extension works only on SCM listing page.
-  </p>
+  <div
+    class="
+      bg-green-50
+      border-t-4 border-green-400
+      rounded-b
+      text-green-600
+      px-4
+      py-3
+      shadow-md
+    "
+    role="alert"
+  >
+    <div class="flex">
+      <div class="py-1">
+        <svg
+          class="fill-current h-6 w-6 text-green-400 mr-4"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 20 20"
+        >
+          <path
+            d="M2.93 17.07A10 10 0 1 1 17.07 2.93 10 10 0 0 1 2.93 17.07zm12.73-1.41A8 8 0 1 0 4.34 4.34a8 8 0 0 0 11.32 11.32zM9 11V9h2v6H9v-4zm0-6h2v2H9V5z"
+          />
+        </svg>
+      </div>
+      <div class="flex items-center">
+        <p class="font-bold text-sm">
+          This extension works only on SCM listing page.
+        </p>
+      </div>
+    </div>
+  </div>
+
   <div class="w-full">
     <button
       (click)="goToSCM()"
