Added confirmation modal for remove action
- Changed solution how planned items are displayed in favor of regular list instead of async pipe because its easier to handle item removal
- Added ability to remove planned buy order with confirmation
- Added ngneat/dialog library

--- a/angular/src/app/modules/options/pages/options/planned-orders/planned-orders.component.html
+++ b/angular/src/app/modules/options/pages/options/planned-orders/planned-orders.component.html
@@ -8,9 +8,8 @@
     gap-4
     px-3
   ">
-  <ng-container *ngIf="plannedOrders$ | async as orders">
-    <app-buy-order-item
-      *ngFor="let order of orders"
-      [orderItem]="order"></app-buy-order-item>
-  </ng-container>
+  <app-buy-order-item
+    *ngFor="let order of plannedOrders; let i = index"
+    [orderItem]="order"
+    (itemRemoved)="removeItem(i)"></app-buy-order-item>
 </div>
