Get rid of hardcoded appId to allow global solution
- Removed hardcoded appId and now solution supports any SCM item

--- a/angular/src/app/modules/options/pages/options/planned-orders/buy-order-item/buy-order-item.component.html
+++ b/angular/src/app/modules/options/pages/options/planned-orders/buy-order-item/buy-order-item.component.html
@@ -24,7 +24,10 @@
       <div class="font-semibold text-gray-700">{{ orderItem.itemName }}</div>
       <a
         [href]="
-          'https://steamcommunity.com/market/listings/730/' + orderItem.itemName
+          'https://steamcommunity.com/market/listings/' +
+          orderItem.appId +
+          '/' +
+          orderItem.itemName
         "
         type="button"
         class="text-sm text-gray-500"
