Added filtering and pagination to planned buy order list
- Added pagination component
- Added pagination to planned buy order list
- Added dropdown with ability to change page size
- Added planned buy order filtering by item name
- Minor visual improvements

--- a/angular/src/app/modules/options/pages/options/planned-orders/buy-order-item/buy-order-item.component.html
+++ b/angular/src/app/modules/options/pages/options/planned-orders/buy-order-item/buy-order-item.component.html
@@ -30,7 +30,7 @@
           orderItem.itemName
         "
         type="button"
-        class="text-sm text-gray-500"
+        class="text-sm text-gray-500 hover:text-blue-900 duration-200"
         target="_blank">
         View on market
       </a>
