--- a/angular/src/app/modules/options/pages/options/planned-orders/planned-orders.component.html
+++ b/angular/src/app/modules/options/pages/options/planned-orders/planned-orders.component.html
@@ -1,15 +1,127 @@
-<div
-  class="
-    grid
-    sm:grid-cols-2
-    lg:grid-cols-3
-    xl:grids-cols-4
-    grid-cols-1
-    gap-4
-    px-3
-  ">
-  <app-buy-order-item
-    *ngFor="let order of plannedOrders; let i = index"
-    [orderItem]="order"
-    (itemRemoved)="removeItem(i)"></app-buy-order-item>
+<div class="container mx-auto">
+  <div class="my-auto mx-auto">
+    <div class="relative w-full lg:w-1/2 mx-auto text-gray-600 mb-0">
+      <input
+        type="search"
+        name="serch"
+        placeholder="Filter items by name"
+        [ngModel]="searchText"
+        (ngModelChange)="search($event)"
+        class="
+          w-full
+          bg-white
+          h-10
+          px-5
+          pr-10
+          rounded-full
+          text-sm
+          focus:outline-none
+          hover:shadow-xl
+          duration-200
+        " />
+      <div class="absolute right-0 top-0 mt-3 mr-4">
+        <svg
+          class="h-4 w-4 fill-current"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          version="1.1"
+          id="Capa_1"
+          x="0px"
+          y="0px"
+          viewBox="0 0 56.966 56.966"
+          style="enable-background: new 0 0 56.966 56.966"
+          xml:space="preserve"
+          width="512px"
+          height="512px">
+          <path
+            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
+        </svg>
+      </div>
+    </div>
+    <div class="flex justify-evenly align-center mb-4 mt-4">
+      <div class="h5 text-center font-semibold">
+        Found {{ foundResults }} results
+      </div>
+      <div class="relative">
+        <button
+          (click)="dropdownOpen = !dropdownOpen"
+          class="relative hover:text-blue-500 duration-200 font-semibold">
+          Show per page: {{ showPerPage }}
+          <svg
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            [ngClass]="{
+              'rotate-180': dropdownOpen,
+              'rotate-0': !dropdownOpen
+            }"
+            class="
+              inline
+              w-4
+              h-4
+              mt-1
+              transition-transform
+              duration-200
+              transform
+              md:-mt-1
+              rotate-0
+            ">
+            <path
+              fill-rule="evenodd"
+              d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+              clip-rule="evenodd"></path>
+          </svg>
+        </button>
+
+        <div
+          *ngIf="dropdownOpen"
+          (click)="dropdownOpen = false"
+          class="fixed inset-0 h-full w-full z-10"></div>
+
+        <div
+          *ngIf="dropdownOpen"
+          class="
+            absolute
+            right-0
+            mt-2
+            bg-white
+            rounded-md
+            overflow-hidden
+            shadow-xl
+            z-20
+          ">
+          <button
+            *ngFor="let option of showPerPageOptions"
+            (click)="changePageSize(option)"
+            [ngClass]="{
+              'bg-purple-500 text-white': option === showPerPage,
+              'hover:bg-gray-200': option !== showPerPage
+            }"
+            type="button"
+            class="block px-4 py-2 w-full text-sm border-b duration-200">
+            {{ option }}
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div
+    class="
+      grid
+      sm:grid-cols-2
+      lg:grid-cols-3
+      xl:grids-cols-4
+      grid-cols-1
+      gap-4
+      px-3
+    ">
+    <app-buy-order-item
+      *ngFor="let order of currentPageItems; let i = index"
+      [orderItem]="order"
+      (itemRemoved)="removeItem(i)"></app-buy-order-item>
+  </div>
+  <app-pagination
+    [items]="allOrdersForDisplay"
+    [pageSize]="showPerPage"
+    (changePage)="onChangePage($event)"></app-pagination>
 </div>
