Added logic that gets users currency ID and displays it on planned buy order page
- Added list of all known currencies as of date
- Extended DB entity with currencyId to be able to get information about users currency
- Added display of users currency in planned buy order list (options)
- Added logic that gets currency ID from inline scripts (Content script)

--- a/angular/src/app/modules/options/pages/options/planned-orders/buy-order-item/buy-order-item.component.html
+++ b/angular/src/app/modules/options/pages/options/planned-orders/buy-order-item/buy-order-item.component.html
@@ -36,11 +36,17 @@
       </a>
     </div>
     <div class="p-2 text-right">
-      <div class="text-lg leading-3">{{ orderItem.price }}</div>
+      <div class="text-lg leading-3">
+        {{ orderItem.price | number: '1.2-2' }}{{ currencySign }}
+      </div>
       <small>x{{ orderItem.amount }}</small>
       <hr class="divider" />
       <div>
-        Total: <b>{{ orderItem.price * orderItem.amount | number: '1.2-2' }}</b>
+        Total:
+        <b>
+          {{ orderItem.price * orderItem.amount | number: '1.2-2'
+          }}{{ currencySign }}
+        </b>
       </div>
     </div>
   </div>
