Added some animations and minor improvements
- Added logic thhat closes sub-menu on click outside
- Added animate.css and fade animation to planned buy order items (list view)
- Moved sub menu in header to separate component

--- a/angular/src/app/modules/options/pages/options/planned-orders/buy-order-item/buy-order-item.component.html
+++ b/angular/src/app/modules/options/pages/options/planned-orders/buy-order-item/buy-order-item.component.html
@@ -11,6 +11,7 @@
     border
     hover:shadow-xl
     duration-200
+    animate__animated animate__fadeIn
   "
   *ngIf="orderItem">
   <div class="flex items-center w-full item-content">
