--- a/angular/src/styles.scss
+++ b/angular/src/styles.scss
@@ -1,6 +1,8 @@
-@import 'tailwindcss/base';
+@import "~animate.css/animate.min.css";
 
-@import 'tailwindcss/components';
+@import "tailwindcss/base";
 
-@import 'tailwindcss/utilities';
+@import "tailwindcss/components";
+
+@import "tailwindcss/utilities";
 /* You can add global styles to this file, and also import other style files */
