Fixed planned buy order removal logic
- Minor visual improvements

--- a/angular/src/app/modules/options/pages/options/planned-orders/planned-orders.component.html
+++ b/angular/src/app/modules/options/pages/options/planned-orders/planned-orders.component.html
@@ -122,6 +122,7 @@
       (itemRemoved)="removeItem(i)"></app-buy-order-item>
   </div>
   <app-pagination
+    #pagination
     [items]="allOrdersForDisplay"
     [pageSize]="showPerPage"
     (changePage)="onChangePage($event)"></app-pagination>
