--- a/angular/src/app/modules/popup/pages/popup/popup.component.html
+++ b/angular/src/app/modules/popup/pages/popup/popup.component.html
@@ -7,9 +7,13 @@
       mb-3
       mx-auto
       text-center
-      font-bold
-      text-gray-700
+      font-semibold
       pt-0
+      tracking-widest
+      text-gray-900
+      rounded-lg
+      dark-mode:text-white
+      focus:outline-none focus:shadow-outline
     ">
     Buy order planner
   </h3>
