--- a/angular/src/app/modules/popup/pages/popup/popup.component.html
+++ b/angular/src/app/modules/popup/pages/popup/popup.component.html
@@ -1,24 +1,10 @@
 <div id="page-wrapper">
   <h3
-    class="
-      title
-      uppercase
-      text-xl
-      mb-3
-      mx-auto
-      text-center
-      font-semibold
-      pt-0
-      tracking-widest
-      text-gray-900
-      rounded-lg
-      dark-mode:text-white
-      focus:outline-none focus:shadow-outline
-    ">
+    class="title uppercase text-xl mb-3 mx-auto text-center font-semibold pt-0 tracking-widest text-gray-900 rounded-lg dark-mode:text-white focus:outline-none focus:shadow-outline">
     Buy order planner
   </h3>
 
-  <ng-container *ngIf="itemInfo; else goToSCMListingTmpl">
+  <ng-container *ngIf="itemInfo || isManualAdding; else goToSCMListingTmpl">
     <form
       class="w-100 bg-white px-4 pt-4"
       [formGroup]="boForm"
@@ -30,24 +16,19 @@
           >Full item name</label
         >
         <input
-          [ngClass]="{ 'ring-2 ring-red-600': boForm.get('itemName').invalid }"
+          [ngClass]="{
+            'ring-2 ring-red-600':
+              boForm.get('itemName').touched && boForm.get('itemName').invalid
+          }"
           formControlName="itemName"
+          (focus)="clearSuccessMessage()"
+          autofocus
           name="itemName"
           type="text"
           placeholder="Enter item name"
-          class="
-            bg-gray-200
-            appearance-none
-            border-2 border-gray-200
-            rounded
-            w-full
-            py-2
-            px-4
-            text-gray-700
-            leading-tight
-            focus:outline-none focus:bg-white focus:border-purple-500
-          " />
+          class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" />
       </div>
+
       <div class="grid grid-cols-2 gap-4">
         <div>
           <label
@@ -56,24 +37,17 @@
             >Price</label
           >
           <input
+            [ngClass]="{
+              'ring-2 ring-red-600':
+                boForm.get('price').touched && boForm.get('price').invalid
+            }"
             formControlName="price"
             name="boPrice"
             type="number"
             min="0"
             step="0.01"
             placeholder="Buy order price"
-            class="
-              bg-gray-200
-              appearance-none
-              border-2 border-gray-200
-              rounded
-              w-full
-              py-2
-              px-4
-              text-gray-700
-              leading-tight
-              focus:outline-none focus:bg-white focus:border-purple-500
-            " />
+            class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" />
         </div>
         <div>
           <label
@@ -82,24 +56,67 @@
             >Amount to buy</label
           >
           <input
+            [ngClass]="{
+              'ring-2 ring-red-600':
+                boForm.get('amount').touched && boForm.get('amount').invalid
+            }"
             formControlName="amount"
             name="boAmount"
             type="number"
             min="1"
             step="1"
             placeholder="Amount to buy"
-            class="
-              bg-gray-200
-              appearance-none
-              border-2 border-gray-200
-              rounded
-              w-full
-              py-2
-              px-4
-              text-gray-700
-              leading-tight
-              focus:outline-none focus:bg-white focus:border-purple-500
-            " />
+            class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" />
+        </div>
+      </div>
+
+      <div class="grid grid-cols-2 gap-4 mt-4" *ngIf="isManualAdding">
+        <div>
+          <label
+            for="appId"
+            class="block text-gray-500 font-medium text-sm mb-2"
+            >App ID</label
+          >
+          <input
+            [ngClass]="{
+              'ring-2 ring-red-600':
+                boForm.get('appId').touched && boForm.get('appId').invalid
+            }"
+            formControlName="appId"
+            name="appId"
+            type="number"
+            min="0"
+            step="1"
+            placeholder="Game app ID"
+            class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" />
+        </div>
+        <div>
+          <label
+            for="currency"
+            class="block text-gray-500 font-medium text-sm mb-2"
+            >Currency</label
+          >
+
+          <div class="flex justify-center">
+            <div class="w-full">
+              <select
+                [ngClass]="{
+                  'ring-2 ring-red-600':
+                    boForm.get('currencyId').touched &&
+                    boForm.get('currencyId').invalid
+                }"
+                formControlName="currencyId"
+                class="form-select appearance-none bg-gray-200border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500"
+                aria-label="Currency select">
+                <option
+                  *ngFor="let currency of currencies"
+                  [value]="currency.currencyId">
+                  {{ currency.code }}
+                  <span *ngIf="currency.symbol">({{ currency.symbol }})</span>
+                </option>
+              </select>
+            </div>
+          </div>
         </div>
       </div>
       <div class="">
@@ -107,24 +124,7 @@
           [disabled]="boForm.invalid"
           [ngClass]="{ 'opacity-50 cursor-not-allowed': boForm.invalid }"
           type="submit"
-          class="
-            w-3/5
-            block
-            mx-auto
-            shadow
-            transition
-            duration-300
-            ease-in-out
-            bg-purple-800
-            hover:bg-purple-900
-            focus:shadow-outline focus:outline-none
-            text-white
-            font-bold
-            py-2
-            px-4
-            rounded
-            mt-4
-          ">
+          class="w-3/5 block mx-auto shadow transition duration-300 ease-in-out bg-purple-800 hover:bg-purple-900 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded mt-4">
           Save
         </button>
       </div>
@@ -132,43 +132,21 @@
 
     <div
       class="m-4 mt-0 pt-8"
-      *ngIf="!itemInfo?.activeBOPrice || !itemInfo?.activeBOAmount">
+      *ngIf="
+        !isManualAdding &&
+        (!itemInfo?.activeBOPrice || !itemInfo?.activeBOAmount)
+      ">
       <button
         (click)="openPlaceBuyOrderWindow()"
         type="button"
-        class="
-          w-full
-          block
-          mx-auto
-          shadow
-          transition
-          duration-300
-          ease-in-out
-          bg-green-500
-          hover:bg-green-600
-          focus:shadow-outline focus:outline-none
-          text-white
-          font-bold
-          text-xl
-          py-2
-          px-4
-          rounded
-          mb-4
-        ">
+        class="w-full block mx-auto shadow transition duration-300 ease-in-out bg-green-500 hover:bg-green-600 focus:shadow-outline focus:outline-none text-white font-bold text-xl py-2 px-4 rounded mb-4">
         PLACE BUY ORDER
       </button>
     </div>
 
     <div
       *ngIf="itemInfo?.activeBOPrice && itemInfo?.activeBOAmount"
-      class="
-        bg-yellow-100
-        border-l-4 border-yellow-500
-        text-yellow-700
-        p-4
-        mt-6
-        mb-3
-      "
+      class="bg-yellow-100 border-l-4 border-yellow-500 text-yellow-700 p-4 mt-6 mb-3"
       role="alert">
       <div class="flex justify-between font-bold text-sm">
         <p>Active buy order</p>
@@ -178,19 +156,19 @@
       </div>
       <p>You already have an active buy order for this item.</p>
     </div>
+    <div
+      *ngIf="isManualAdding && isManualSuccess"
+      class="bg-green-100 border-l-4 border-green-500 text-green-700 p-4 mt-6 mb-3"
+      role="alert">
+      <div class="flex justify-between font-bold text-md">
+        <p>Item was added</p>
+      </div>
+    </div>
   </ng-container>
 
   <ng-template #goToSCMListingTmpl>
     <div
-      class="
-        bg-green-50
-        border-t-4 border-green-400
-        rounded-b
-        text-green-600
-        px-4
-        py-3
-        shadow-md
-      "
+      class="bg-green-50 border-t-4 border-green-400 rounded-b text-green-600 px-4 py-3 shadow-md"
       role="alert">
       <div class="flex">
         <div class="py-1">
@@ -215,26 +193,24 @@
         (click)="goToSCM()"
         type="button"
         rel="nofollow"
-        class="
-          w-3/5
-          block
-          text-center
-          mx-auto
-          shadow
-          transition
-          duration-300
-          ease-in-out
-          bg-yellow-600
-          hover:bg-yellow-700
-          focus:shadow-outline focus:outline-none
-          text-white
-          font-bold
-          py-2
-          px-4
-          rounded
-          mt-4
-        ">
+        class="w-3/5 block text-center mx-auto shadow transition duration-300 ease-in-out bg-yellow-600 hover:bg-yellow-700 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded mt-4">
         Go to market page
+      </button>
+    </div>
+
+    <div class="relative flex items-center">
+      <div class="flex-grow border-t border-gray-400"></div>
+      <span class="flex-shrink mx-4">OR</span>
+      <div class="flex-grow border-t border-gray-400"></div>
+    </div>
+
+    <div class="w-full mb-5">
+      <button
+        (click)="openManualAdd()"
+        type="button"
+        rel="nofollow"
+        class="w-3/5 block text-center mx-auto shadow transition duration-300 ease-in-out bg-green-500 hover:bg-green-600 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded mt-4">
+        Manually add item information
       </button>
     </div>
   </ng-template>
@@ -246,24 +222,7 @@
   <div class="flex justify-between items-center w-full">
     <button
       type="button"
-      class="
-        flex
-        text-black
-        hover:text-blue-900
-        duration-200
-        background-transparent
-        font-bold
-        uppercase
-        px-0
-        py-1
-        text-xs
-        outline-none
-        focus:outline-none
-        mr-1
-        mb-1
-        ease-linear
-        transition-all
-      ">
+      class="flex text-black hover:text-blue-900 duration-200 background-transparent font-bold uppercase px-0 py-1 text-xs outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="16"
@@ -295,23 +254,7 @@
     <button
       (click)="goToPlannedList()"
       type="button"
-      class="
-        text-blue-500
-        hover:text-blue-900
-        duration-200
-        background-transparent
-        font-bold
-        uppercase
-        px-0
-        py-1
-        text-xs
-        outline-none
-        focus:outline-none
-        mr-1
-        mb-1
-        ease-linear
-        transition-all
-      ">
+      class="text-blue-500 hover:text-blue-900 duration-200 background-transparent font-bold uppercase px-0 py-1 text-xs outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all">
       View all items
     </button>
   </div>
