Added initial stats page
- Added empty module for stats page
- Added stats to navigation menu

--- a/angular/src/app/modules/options/pages/options/options.component.html
+++ b/angular/src/app/modules/options/pages/options/options.component.html
@@ -1,14 +1,12 @@
 <div class="min-h-screen page-wrapper">
   <div class="antialiased bg-gray-100 dark-mode:bg-gray-900 mb-10 z-30">
-    <div
-      class="
+    <div class="
         w-full
         text-gray-700
         bg-white
         dark-mode:text-gray-200 dark-mode:bg-gray-800
       ">
-      <div
-        class="
+      <div class="
           flex flex-col
           max-w-screen-xl
           px-4
@@ -17,9 +15,7 @@
           lg:px-8
         ">
         <div class="flex flex-row items-center justify-between p-4">
-          <a
-            routerLink="/options"
-            class="
+          <a routerLink="/options" class="
               text-lg
               font-semibold
               tracking-widest
@@ -28,38 +24,25 @@
               rounded-lg
               dark-mode:text-white
               focus:outline-none focus:shadow-outline
-            "
-            >Buy Order Planner</a
-          >
-          <button
-            class="rounded-lg md:hidden focus:outline-none focus:shadow-outline"
-            (click)="open = !open">
+            ">Buy Order Planner</a>
+          <button class="rounded-lg md:hidden focus:outline-none focus:shadow-outline" (click)="open = !open">
             <svg fill="currentColor" viewBox="0 0 20 20" class="w-6 h-6">
-              <path
-                x-show="!open"
-                fill-rule="evenodd"
+              <path x-show="!open" fill-rule="evenodd"
                 d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z"
                 clip-rule="evenodd"></path>
-              <path
-                x-show="open"
-                fill-rule="evenodd"
+              <path x-show="open" fill-rule="evenodd"
                 d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
                 clip-rule="evenodd"></path>
             </svg>
           </button>
         </div>
-        <nav
-          [ngClass]="{ flex: open, hidden: !open }"
-          class="
+        <nav [ngClass]="{ flex: open, hidden: !open }" class="
             flex-col flex-grow
             hidden
             pb-4
             md:pb-0 md:flex md:justify-end md:flex-row
           ">
-          <a
-            routerLink="planned"
-            routerLinkActive="active"
-            class="
+          <a routerLink="stats" routerLinkActive="active" class="
               z-10
               px-4
               py-2
@@ -79,13 +62,30 @@
               focus:text-gray-900
               hover:bg-gray-200
               focus:bg-gray-200 focus:outline-none focus:shadow-outline
-            "
-            >Planned orders</a
-          >
+            ">Stats</a>
+          <a routerLink="planned" routerLinkActive="active" class="
+              z-10
+              px-4
+              py-2
+              mt-2
+              text-sm
+              font-semibold
+              bg-transparent
+              rounded-lg
+              dark-mode:bg-transparent
+              dark-mode:hover:bg-gray-600
+              dark-mode:focus:bg-gray-600
+              dark-mode:focus:text-white
+              dark-mode:hover:text-white
+              dark-mode:text-gray-200
+              md:mt-0 md:ml-4
+              hover:text-gray-900
+              focus:text-gray-900
+              hover:bg-gray-200
+              focus:bg-gray-200 focus:outline-none focus:shadow-outline
+            ">Planned orders</a>
           <div class="relative">
-            <button
-              (click)="open = !open"
-              class="
+            <button (click)="open = !open" class="
                 items-center
                 w-full
                 px-4
@@ -106,14 +106,9 @@
                 focus:text-gray-900
                 hover:bg-gray-200
                 focus:bg-gray-200 focus:outline-none focus:shadow-outline
-              "
-              [ngClass]="{ 'flex flex-row text-gray-900 bg-gray-200': open }">
+              " [ngClass]="{ 'flex flex-row text-gray-900 bg-gray-200': open }">
               <span>More</span>
-              <svg
-                fill="currentColor"
-                viewBox="0 0 20 20"
-                [ngClass]="{ 'rotate-180': open, 'rotate-0': !open }"
-                class="
+              <svg fill="currentColor" viewBox="0 0 20 20" [ngClass]="{ 'rotate-180': open, 'rotate-0': !open }" class="
                   inline
                   w-4
                   h-4
@@ -124,8 +119,7 @@
                   transform
                   md:-mt-1
                 ">
-                <path
-                  fill-rule="evenodd"
+                <path fill-rule="evenodd"
                   d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
                   clip-rule="evenodd"></path>
               </svg>
