Added possible design for stats page with dummy data

--- a/angular/src/app/modules/options/pages/options/stats/stats.component.html
+++ b/angular/src/app/modules/options/pages/options/stats/stats.component.html
@@ -1,3 +1,204 @@
-<p>
-  stats works!
-</p>
+<!---===================== FIRST ROW CONTAINING THE  STATS CARD STARTS HERE =============================-->
+<div class="flex flex-col justify-between lg:flex-row">
+  <div class="container mx-auto mb-10">
+    <div
+      class="w-72 bg-white max-w-xs mx-auto rounded-lg shadow-md hover:shadow-lg transition duration-500 transform hover:scale-200">
+      <div class="py-5 bg-red-400 flex items-center justify-between rounded-t-lg">
+        <p class="mr-0 text-white text-lg pl-5">Planned orders</p>
+      </div>
+      <div class="flex justify-center w-full px-5 pt-3 text-sm text-gray-400">
+        <p class="text-center">Total added</p>
+      </div>
+      <p class="pb-4 text-3xl text-center">140</p>
+    </div>
+  </div>
+
+  <div class="container mx-auto mb-10">
+    <div
+      class="w-72 bg-white max-w-xs mx-auto rounded-lg shadow-md hover:shadow-lg transition duration-500 transform hover:scale-100">
+      <div class="py-5 bg-blue-400 flex items-center justify-between rounded-t-lg">
+        <p class="mr-0 text-white text-lg pl-5">Planned amount</p>
+      </div>
+      <div class="flex justify-center w-full px-5 pt-3 text-sm text-gray-400">
+        <p class="text-center">Combined amount</p>
+      </div>
+      <p class="pb-4 text-3xl text-center">43242</p>
+    </div>
+  </div>
+
+  <div class="container mx-auto mb-10">
+    <div
+      class="w-72 bg-white max-w-xs mx-auto rounded-lg shadow-md hover:shadow-lg transition duration-500 transform hover:scale-100">
+      <div class="py-5 bg-purple-400 flex items-center justify-between rounded-t-lg">
+        <p class="mr-0 text-white text-lg pl-5">Planned expensees</p>
+      </div>
+      <div class="flex justify-center w-full px-5 pt-3 text-sm text-gray-400">
+        <p class="text-center">Combined required</p>
+      </div>
+      <p class="pb-4 text-3xl text-center">1403.20 EUR</p>
+    </div>
+  </div>
+</div>
+
+<div class="grid grid-cols-1 lg:grid-cols-3 gap-10 p-5">
+  <div class="container mx-auto bg-white shadow-xl">
+    <div class="w-11/12 mx-auto">
+      <div class="bg-white mb-6">
+        <div class="py-4 text-xl font-bold w-full text-center">
+          Highest amount
+        </div>
+        <table class="text-left w-full border-collapse">
+          <thead>
+            <tr>
+              <th class="py-4 px-6 bg-indigo-500 font-bold uppercase text-sm text-white border-b border-grey-light">
+                ITEM</th>
+              <th
+                class="py-4 px-6 text-center bg-indigo-500 font-bold uppercase text-sm text-white border-b border-grey-light">
+                AMOUNT</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="hover:bg-grey-lighter">
+              <td class="py-4 px-6 border-b border-grey-light">Bible</td>
+              <td class="py-4 px-6 text-center border-b border-grey-light">
+                11980
+              </td>
+            </tr>
+            <tr class="hover:bg-grey-lighter">
+              <td class="py-4 px-6 border-b border-grey-light">Blah</td>
+              <td class="py-4 px-6 text-center border-b border-grey-light">
+                340
+              </td>
+            </tr>
+            <tr class="hover:bg-grey-lighter">
+              <td class="py-4 px-6 border-b border-grey-light">Blah</td>
+              <td class="py-4 px-6 text-center border-b border-grey-light">
+                901
+              </td>
+            </tr>
+            <tr class="hover:bg-grey-lighter">
+              <td class="py-4 px-6 border-b border-grey-light">Blah</td>
+              <td class="py-4 px-6 text-center border-b border-grey-light">
+                11950
+              </td>
+            </tr>
+            <tr class="hover:bg-grey-lighter">
+              <td class="py-4 px-6 border-b border-grey-light">Blah</td>
+              <td class="py-4 px-6 text-center border-b border-grey-light">
+                459
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <div class="container mx-auto bg-white shadow-xl">
+    <div class="w-11/12 mx-auto">
+      <div class="bg-white mb-6">
+        <div class="py-4 text-xl font-bold w-full text-center">
+          Highest price per piece
+        </div>
+        <table class="text-left w-full border-collapse">
+          <thead>
+            <tr>
+              <th class="py-4 px-6 bg-indigo-500 font-bold uppercase text-sm text-white border-b border-grey-light">
+                ITEM</th>
+              <th
+                class="py-4 px-6 text-center bg-indigo-500 font-bold uppercase text-sm text-white border-b border-grey-light">
+                BUY PRICE</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="hover:bg-grey-lighter">
+              <td class="py-4 px-6 border-b border-grey-light">Bible</td>
+              <td class="py-4 px-6 text-center border-b border-grey-light">
+                11980
+              </td>
+            </tr>
+            <tr class="hover:bg-grey-lighter">
+              <td class="py-4 px-6 border-b border-grey-light">Blah</td>
+              <td class="py-4 px-6 text-center border-b border-grey-light">
+                340
+              </td>
+            </tr>
+            <tr class="hover:bg-grey-lighter">
+              <td class="py-4 px-6 border-b border-grey-light">Blah</td>
+              <td class="py-4 px-6 text-center border-b border-grey-light">
+                901
+              </td>
+            </tr>
+            <tr class="hover:bg-grey-lighter">
+              <td class="py-4 px-6 border-b border-grey-light">Blah</td>
+              <td class="py-4 px-6 text-center border-b border-grey-light">
+                11950
+              </td>
+            </tr>
+            <tr class="hover:bg-grey-lighter">
+              <td class="py-4 px-6 border-b border-grey-light">Blah</td>
+              <td class="py-4 px-6 text-center border-b border-grey-light">
+                459
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <div class="container mx-auto bg-white shadow-xl">
+    <div class="w-11/12 mx-auto">
+      <div class="bg-white mb-6">
+        <div class="py-4 text-xl font-bold w-full text-center">
+          Most expensive (amount x price)
+        </div>
+        <table class="text-left w-full border-collapse">
+          <thead>
+            <tr>
+              <th class="py-4 px-6 bg-indigo-500 font-bold uppercase text-sm text-white border-b border-grey-light">
+                ITEM</th>
+              <th
+                class="py-4 px-6 text-center bg-indigo-500 font-bold uppercase text-sm text-white border-b border-grey-light">
+                TOTAL PRICE
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="hover:bg-grey-lighter">
+              <td class="py-4 px-6 border-b border-grey-light">Bible</td>
+              <td class="py-4 px-6 text-center border-b border-grey-light">
+                11980
+              </td>
+            </tr>
+            <tr class="hover:bg-grey-lighter">
+              <td class="py-4 px-6 border-b border-grey-light">Blah</td>
+              <td class="py-4 px-6 text-center border-b border-grey-light">
+                340
+              </td>
+            </tr>
+            <tr class="hover:bg-grey-lighter">
+              <td class="py-4 px-6 border-b border-grey-light">Blah</td>
+              <td class="py-4 px-6 text-center border-b border-grey-light">
+                901
+              </td>
+            </tr>
+            <tr class="hover:bg-grey-lighter">
+              <td class="py-4 px-6 border-b border-grey-light">Blah</td>
+              <td class="py-4 px-6 text-center border-b border-grey-light">
+                11950
+              </td>
+            </tr>
+            <tr class="hover:bg-grey-lighter">
+              <td class="py-4 px-6 border-b border-grey-light">Blah</td>
+              <td class="py-4 px-6 text-center border-b border-grey-light">
+                459
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+<!---------===================== SECOND ROW CONTAINING THE TABLE STATS ENDS HERE =============================-->
