Added state & facade for options (Optimization)
- Added logic that requests planned orders from DB in facade and stores them in state
- Added logic that tries to get planned orders from state. Otherwise request to DB will be made
- Added logic that gets/sets currency in facade. It is based on first added planned order currency
- Added model for stats
- Added logic that calculates stats for stats page
- Added type for Currencies
- Added some simple stat display

--- a/angular/src/app/modules/options/pages/options/stats/stats.component.html
+++ b/angular/src/app/modules/options/pages/options/stats/stats.component.html
@@ -9,7 +9,7 @@
       <div class="flex justify-center w-full px-5 pt-3 text-sm text-gray-400">
         <p class="text-center">Total added</p>
       </div>
-      <p class="pb-4 text-3xl text-center">140</p>
+      <p class="pb-4 text-3xl text-center">{{stats.totalOrders}}</p>
     </div>
   </div>
 
@@ -22,7 +22,7 @@
       <div class="flex justify-center w-full px-5 pt-3 text-sm text-gray-400">
         <p class="text-center">Combined amount</p>
       </div>
-      <p class="pb-4 text-3xl text-center">43242</p>
+      <p class="pb-4 text-3xl text-center">{{stats.totalAmount}}</p>
     </div>
   </div>
 
@@ -35,7 +35,7 @@
       <div class="flex justify-center w-full px-5 pt-3 text-sm text-gray-400">
         <p class="text-center">Combined required</p>
       </div>
-      <p class="pb-4 text-3xl text-center">1403.20 EUR</p>
+      <p class="pb-4 text-3xl text-center">{{stats.totalPrice | number:'1.2-2'}} EUR</p>
     </div>
   </div>
 </div>
